--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,20 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# PWA files
+dev-dist/
+sw.js
+sw.js.map
+workbox-*.js
+workbox-*.js.map
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Vercel
+.vercel
