PWA complet + corrections TypeScript pour Vercel

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "npm run build && vercel --prod"
   },
   "devDependencies": {
+    "@types/node": "^24.8.1",
     "typescript": "~5.9.3",
     "vite": "^7.1.7"
   },
