--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,6 +6,7 @@
     "skipLibCheck": true,
     "types": ["node"],
     "composite": true,
+    "noEmit": true,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
